--- a/mk.html
+++ b/mk.html
@@ -6,14 +6,6 @@
     <title>Github</title>
 </head>
     <footer>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
-        <h1>Muscab</h1>
+      <p>Lorem, ipsum.</p>
     </footer>
 </html>
